--- a/index.html
+++ b/index.html
@@ -29,20 +29,27 @@
       <!-- Zona central: controles +/- input -->
       <main class="flex-1 flex flex-col items-center justify-center">
         <div class="flex flex-col items-center gap-6">
-          <div class="flex items-stretch gap-3">
-            <!-- Botón menos -->
-            <button id="minusBtn" type="button" aria-label="Disminuir" class="size-14 rounded-2xl grid place-items-center ring-1 ring-slate-300/80 dark:ring-slate-700/80 bg-white dark:bg-slate-800 shadow hover:scale-[1.02] active:scale-95 transition">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14"/></svg>
-            </button>
+          <div class="flex flex-col items-center gap-3">
+            <div class="flex items-stretch gap-3">
+              <!-- Botón menos -->
+              <button id="minusBtn" type="button" aria-label="Disminuir" class="size-14 rounded-2xl grid place-items-center ring-1 ring-slate-300/80 dark:ring-slate-700/80 bg-white dark:bg-slate-800 shadow hover:scale-[1.02] active:scale-95 transition">
+                <span class="text-lg font-bold">−</span>
+              </button>
 
-            <!-- Input number -->
-            <label class="sr-only" for="numberInput">Cantidad</label>
-            <input id="numberInput" type="number" inputmode="numeric" min="0" step="1" value="1"
-                   class="w-28 text-center text-3xl font-medium rounded-2xl ring-1 ring-slate-300/80 dark:ring-slate-700/80 bg-white dark:bg-slate-800 shadow px-4 py-3 focus:outline-none focus:ring-2 focus:ring-indigo-500/60 selection:bg-indigo-500/20" />
+              <!-- Input number -->
+              <label class="sr-only" for="numberInput">Cantidad</label>
+              <input id="numberInput" type="number" inputmode="decimal" min="0" step="0.01" value="1.00"
+                     class="w-28 text-center text-3xl font-medium rounded-2xl ring-1 ring-slate-300/80 dark:ring-slate-700/80 bg-white dark:bg-slate-800 shadow px-4 py-3 focus:outline-none focus:ring-2 focus:ring-indigo-500/60 selection:bg-indigo-500/20" />
 
-            <!-- Botón más -->
-            <button id="plusBtn" type="button" aria-label="Aumentar" class="size-14 rounded-2xl grid place-items-center ring-1 ring-slate-300/80 dark:ring-slate-700/80 bg-white dark:bg-slate-800 shadow hover:scale-[1.02] active:scale-95 transition">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14"/></svg>
+              <!-- Botón más -->
+              <button id="plusBtn" type="button" aria-label="Aumentar" class="size-14 rounded-2xl grid place-items-center ring-1 ring-slate-300/80 dark:ring-slate-700/80 bg-white dark:bg-slate-800 shadow hover:scale-[1.02] active:scale-95 transition">
+                <span class="text-lg font-bold">+</span>
+              </button>
+            </div>
+
+            <!-- Botón selector de paso -->
+            <button id="stepBtn" type="button" aria-label="Cambiar paso" class="w-28 py-1 rounded-2xl ring-1 ring-slate-300/80 dark:ring-slate-700/80 bg-white dark:bg-slate-800 shadow hover:scale-[1.02] active:scale-95 transition flex items-center justify-center">
+              <span id="stepLabel" class="text-lg font-bold">1€</span>
             </button>
           </div>
 
