--- a/pages/home.html
+++ b/pages/home.html
@@ -25,7 +25,7 @@
 
   <!-- Botón Guardar -->
   <button id="saveBtn" type="button" class="inline-flex items-center gap-2 rounded-2xl px-5 py-3 text-base font-medium bg-indigo-600 text-white shadow hover:bg-indigo-500 active:scale-95 transition">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" class="w-5 h-5"><path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5l3.5-3.5M12 16.5l-3.5-3.5M12 16.5V4.5"/></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" class="w-5 h-5"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7"/></svg>
     Guardar
   </button>
 
