--- a/pages/month.html
+++ b/pages/month.html
@@ -10,14 +10,18 @@
   <!-- Resumen del mes -->
   <div class="mb-6 p-4 bg-slate-50 dark:bg-slate-800/50 rounded-2xl">
     <h3 class="text-lg font-semibold mb-3" data-i18n="month.summary">Resumen del mes</h3>
-    <div class="grid grid-cols-2 gap-4">
+    <div class="grid grid-cols-3 gap-4">
       <div class="text-center">
-        <p class="text-sm text-slate-600 dark:text-slate-400" data-i18n="month.totalExpenses">Total gastos</p>
-        <p class="text-2xl font-bold text-red-600" id="total-expenses">0,00€</p>
+        <p class="text-sm text-slate-600 dark:text-slate-400" data-i18n="month.totalIncome">Total ingresos</p>
+        <p class="text-xl font-bold text-green-600" id="total-income">0,00€</p>
       </div>
       <div class="text-center">
-        <p class="text-sm text-slate-600 dark:text-slate-400" data-i18n="month.averagePerDay">Promedio por día</p>
-        <p class="text-2xl font-bold text-slate-700 dark:text-slate-300" id="average-per-day">0,00€</p>
+        <p class="text-sm text-slate-600 dark:text-slate-400" data-i18n="month.totalExpenses">Total gastos</p>
+        <p class="text-xl font-bold text-red-600" id="total-expenses">0,00€</p>
+      </div>
+      <div class="text-center">
+        <p class="text-sm text-slate-600 dark:text-slate-400" data-i18n="month.balance">Balance total</p>
+        <p class="text-xl font-bold" id="total-balance">0,00€</p>
       </div>
     </div>
   </div>
