--- a/pages/month.html
+++ b/pages/month.html
@@ -84,6 +84,41 @@
           <p id="modal-id" class="mt-1 text-sm text-slate-500 dark:text-slate-500"></p>
         </div>
       </div>
+      
+      <!-- Botón eliminar -->
+      <div class="p-6 pt-0">
+        <button id="delete-transaction" type="button" class="w-full inline-flex items-center justify-center gap-2 rounded-2xl px-5 py-3 text-base font-medium bg-red-600 text-white shadow hover:bg-red-700 active:scale-95 transition-all">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" class="w-5 h-5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"/>
+          </svg>
+          <span data-i18n="modal.delete">Eliminar</span>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal de confirmación de eliminación -->
+<div id="delete-confirm-modal" class="fixed inset-0 bg-black/50 backdrop-blur-sm hidden z-50 flex items-center justify-center p-4">
+  <div class="bg-white dark:bg-slate-800 rounded-2xl shadow-xl max-w-sm w-full mx-4">
+    <!-- Header del modal de confirmación -->
+    <div class="p-6 text-center">
+      <div class="mx-auto flex items-center justify-center size-12 rounded-full bg-red-100 dark:bg-red-900/20 mb-4">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="w-6 h-6 text-red-600">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"/>
+        </svg>
+      </div>
+      <h3 class="text-lg font-semibold text-slate-900 dark:text-slate-100 mb-2" data-i18n="modal.confirmDelete">¿Eliminar transacción?</h3>
+      <p class="text-sm text-slate-600 dark:text-slate-400 mb-6" data-i18n="modal.confirmDeleteMessage">Esta acción no se puede deshacer.</p>
+      
+      <div class="flex gap-3">
+        <button id="cancel-delete" type="button" class="flex-1 px-4 py-2 text-sm font-medium text-slate-700 dark:text-slate-300 bg-slate-100 dark:bg-slate-700 rounded-lg hover:bg-slate-200 dark:hover:bg-slate-600 transition-colors">
+          <span data-i18n="modal.cancel">Cancelar</span>
+        </button>
+        <button id="confirm-delete" type="button" class="flex-1 px-4 py-2 text-sm font-medium text-white bg-red-600 rounded-lg hover:bg-red-700 transition-colors">
+          <span data-i18n="modal.confirmDeleteAction">Eliminar</span>
+        </button>
+      </div>
     </div>
   </div>
 </div>
