--- a/pages/month.html
+++ b/pages/month.html
@@ -106,24 +106,24 @@
     <div id="modal-edit" class="p-6 hidden">
       <div class="space-y-4">
         <!-- Descripción -->
-        <div>
+        <div class="relative">
           <label class="block text-sm font-medium text-slate-600 dark:text-slate-400" data-i18n="modal.description">Descripción</label>
           <div class="mt-1 relative">
-            <input list="descriptions-list" id="edit-description" type="text" class="w-full px-3 py-2 rounded-lg border border-slate-300 dark:border-slate-600 bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <datalist id="descriptions-list">
-              <!-- Se rellenará dinámicamente -->
-            </datalist>
+            <input id="edit-description" type="text" class="w-full px-4 py-3 rounded-2xl ring-1 ring-slate-300/80 dark:ring-slate-700/80 bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 shadow focus:outline-none focus:ring-2 focus:ring-indigo-500/60 placeholder:text-slate-400 dark:placeholder:text-slate-500 transition-all" placeholder="Escribir descripción..." autocomplete="off">
+            <div id="edit-description-dropdown" class="absolute top-full left-0 right-0 bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-xl shadow-lg mt-1 max-h-64 overflow-auto z-50 hidden">
+              <!-- Opciones dinámicas -->
+            </div>
           </div>
         </div>
         
         <!-- Categoría -->
-        <div>
+        <div class="relative">
           <label class="block text-sm font-medium text-slate-600 dark:text-slate-400" data-i18n="modal.category">Categoría</label>
           <div class="mt-1 relative">
-            <input list="categories-list" id="edit-category" type="text" class="w-full px-3 py-2 rounded-lg border border-slate-300 dark:border-slate-600 bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <datalist id="categories-list">
-              <!-- Se rellenará dinámicamente -->
-            </datalist>
+            <input id="edit-category" type="text" class="w-full px-4 py-3 rounded-2xl ring-1 ring-slate-300/80 dark:ring-slate-700/80 bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 shadow focus:outline-none focus:ring-2 focus:ring-indigo-500/60 placeholder:text-slate-400 dark:placeholder:text-slate-500 transition-all" placeholder="Escribir categoría..." autocomplete="off">
+            <div id="edit-category-dropdown" class="absolute top-full left-0 right-0 bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-xl shadow-lg mt-1 max-h-64 overflow-auto z-50 hidden">
+              <!-- Opciones dinámicas -->
+            </div>
           </div>
         </div>
         
