--- a/pages/month.html
+++ b/pages/month.html
@@ -21,8 +21,18 @@
   <div class="mb-6 p-4 bg-slate-50 dark:bg-slate-800/50 rounded-2xl">
     <div class="flex items-center justify-between mb-3">
       <h3 class="text-lg font-semibold" data-i18n="month.summary">Resumen del mes</h3>
-      <div id="summary-filter-indicator" class="text-sm text-indigo-600 dark:text-indigo-400 hidden">
-        <span data-i18n="filter.showingFiltered">Mostrando datos filtrados</span>
+      <div class="flex items-center gap-3">
+        <div id="summary-filter-indicator" class="text-sm text-indigo-600 dark:text-indigo-400 hidden">
+          <span data-i18n="filter.showingFiltered">Mostrando datos filtrados</span>
+        </div>
+        <button id="breakdown-btn" type="button" class="inline-flex items-center gap-2 rounded-xl px-3 py-2 text-sm font-medium bg-indigo-600 text-white shadow hover:bg-indigo-700 active:scale-95 transition-all">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" class="w-4 h-4">
+            <path d="M3 3v5h5"/>
+            <path d="M6 17l4-4 4 4 5-5"/>
+            <path d="M13 13h7v7"/>
+          </svg>
+          <span data-i18n="breakdown.button">Desglose</span>
+        </button>
       </div>
     </div>
     <div class="grid grid-cols-3 gap-4">
