Add "Balance at end of month" at breakdown page

--- a/pages/breakdown.html
+++ b/pages/breakdown.html
@@ -44,6 +44,15 @@
     </div>
   </div>
 
+  <!-- Balance al final del mes -->
+  <div class="mb-6 p-4 bg-blue-50 dark:bg-blue-900/20 rounded-2xl border border-blue-200 dark:border-blue-700">
+    <h3 class="text-lg font-semibold mb-3 text-blue-900 dark:text-blue-100" data-i18n="breakdown.endOfMonth">Balance al final del mes</h3>
+    <div class="text-center">
+      <p class="text-sm text-blue-700 dark:text-blue-300 mb-1" data-i18n="breakdown.totalBalanceEndMonth">Balance total al último día del mes</p>
+      <p class="text-2xl font-bold" id="breakdown-end-balance">0,00€</p>
+    </div>
+  </div>
+
   <!-- Desglose por categorías -->
   <div class="mb-8">
     <h2 class="text-xl font-semibold mb-4 text-slate-900 dark:text-slate-100" data-i18n="breakdown.byCategory">Por categoría</h2>
