--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>SpendTap</title>
-    <link rel="stylesheet" href="./index.css" />
   </head>
   <body class="h-full bg-gradient-to-b from-slate-50 to-slate-100 dark:from-slate-900 dark:to-slate-950 text-slate-800 dark:text-slate-100">
     <div class="flex items-center justify-center min-h-screen">
@@ -16,6 +15,7 @@
 
     <!-- Initialize App -->
     <script type="module">
+      import '/assets/main.js';
       import { initRouter } from '/assets/pages.js';
       
       // Initialize the app
