--- a/pages/home.html
+++ b/pages/home.html
@@ -84,6 +84,20 @@
         </div>
       </div>
 
+      <!-- Tipo de transacción -->
+      <div>
+        <label class="flex items-center justify-between">
+          <span class="text-sm font-medium text-slate-700 dark:text-slate-300">
+            <span class="text-red-600 dark:text-red-400" data-i18n="modal.expense">Es un gasto</span>
+          </span>
+          <div class="relative">
+            <input id="is-expense-checkbox" type="checkbox" checked class="sr-only peer">
+            <div class="w-11 h-6 bg-slate-200 dark:bg-slate-600 rounded-full peer-checked:bg-blue-500 dark:peer-checked:bg-blue-400 peer-focus:ring-2 peer-focus:ring-blue-300 transition-colors cursor-pointer"></div>
+            <div class="absolute top-0.5 left-0.5 w-5 h-5 bg-white rounded-full shadow-md peer-checked:translate-x-5 transition-transform cursor-pointer"></div>
+          </div>
+        </label>
+      </div>
+
       <!-- Categoría -->
       <div>
         <label class="block text-sm font-medium text-slate-600 dark:text-slate-400 mb-3" data-i18n="modal.category">Categoría</label>
