--- a/pages/yearly-breakdown.html
+++ b/pages/yearly-breakdown.html
@@ -11,7 +11,22 @@
   <!-- Título -->
   <div class="mb-6 text-center">
     <h1 class="text-2xl font-bold text-slate-900 dark:text-slate-100" data-i18n="breakdown.yearlyTitle">Desglose anual</h1>
-    <p id="yearly-breakdown-period" class="text-slate-600 dark:text-slate-400 mt-1">2025</p>
+    
+    <!-- Navegación por años -->
+    <div class="flex items-center justify-center gap-3 mt-4">
+      <!-- Botón año anterior -->
+      <button id="yearly-prevYearBtn" type="button" class="px-3 py-1.5 text-sm font-medium rounded-lg bg-slate-100 dark:bg-slate-800 hover:bg-slate-200 dark:hover:bg-slate-700 shadow-sm ring-1 ring-slate-300/30 dark:ring-slate-700/50 transition-all hover:scale-105 active:scale-95">
+        <span>&lt;<span id="yearly-prevYearLabel">2024</span></span>
+      </button>
+
+      <!-- Año actual -->
+      <p id="yearly-breakdown-period" class="text-lg font-bold text-slate-700 dark:text-slate-200">2025</p>
+
+      <!-- Botón año siguiente -->
+      <button id="yearly-nextYearBtn" type="button" class="px-3 py-1.5 text-sm font-medium rounded-lg bg-slate-100 dark:bg-slate-800 hover:bg-slate-200 dark:hover:bg-slate-700 shadow-sm ring-1 ring-slate-300/30 dark:ring-slate-700/50 transition-all hover:scale-105 active:scale-95">
+        <span><span id="yearly-nextYearLabel">2026</span>&gt;</span>
+      </button>
+    </div>
   </div>
 
   <!-- Resumen anual -->
